--- a/word2vec-embeddings/Negative_Sampling_Exercise.ipynb
+++ b/word2vec-embeddings/Negative_Sampling_Exercise.ipynb
@@ -73,11 +73,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " anarchism originated as a term of abuse first used against early working class radicals including t\n"
+     ]
+    }
+   ],
    "source": [
     "# read in the extracted text file      \n",
     "with open('data/text8') as f:\n",
@@ -103,11 +109,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['anarchism', 'originated', 'as', 'a', 'term', 'of', 'abuse', 'first', 'used', 'against', 'early', 'working', 'class', 'radicals', 'including', 'the', 'diggers', 'of', 'the', 'english', 'revolution', 'and', 'the', 'sans', 'culottes', 'of', 'the', 'french', 'revolution', 'whilst']\n"
+     ]
+    }
+   ],
    "source": [
     "import utils\n",
     "\n",
@@ -118,11 +130,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total words in text: 16680599\n",
+      "Unique words: 63641\n"
+     ]
+    }
+   ],
    "source": [
     "# print some stats about this word data\n",
     "print(\"Total words in text: {}\".format(len(words)))\n",
@@ -143,11 +162,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[5233, 3080, 11, 5, 194, 1, 3133, 45, 58, 155, 127, 741, 476, 10571, 133, 0, 27349, 1, 0, 102, 854, 2, 0, 15067, 58112, 1, 0, 150, 854, 3580]\n"
+     ]
+    }
+   ],
    "source": [
     "vocab_to_int, int_to_vocab = utils.create_lookup_tables(words)\n",
     "int_words = [vocab_to_int[word] for word in words]\n",
@@ -172,11 +197,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[5233, 3080, 10571, 27349, 15067, 58112, 10712, 454, 58, 3672, 40, 7088, 5233, 1052, 44611, 5233, 200, 2621, 8983, 4147, 25, 6437, 4186, 5233, 4860, 6753, 7573, 11064, 11, 7088]\n"
+     ]
+    }
+   ],
    "source": [
     "from collections import Counter\n",
     "import random\n",
@@ -684,7 +715,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -698,7 +729,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
