--- a/word2vec-embeddings/Negative_Sampling_Solution.ipynb
+++ b/word2vec-embeddings/Negative_Sampling_Solution.ipynb
@@ -273,7 +273,9 @@
     "    stop = idx + R\n",
     "    target_words = words[start:idx] + words[idx+1:stop+1]\n",
     "    \n",
-    "    return list(target_words)"
+    "    return list(target_words)\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -1351,7 +1353,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1365,7 +1367,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
